--- a/src/algorithm/templates/algorithm/manager.html
+++ b/src/algorithm/templates/algorithm/manager.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
-
 {% block content %}
 
 <style type="text/css">
@@ -31,6 +30,8 @@
   }
 
 </style>
+<html>
+
   <a href="{% url 'patient:detail' slug %}" style="border-radius: 0;" class="btn btn-dark"><</a>
 
   <button id="next-button" onclick="next()" class="btn btn-success btn-round">&rarr;</button>
@@ -51,14 +52,28 @@
     {% endfor %}
 
     <div id="final" style="display: none; text-align: left;"> </div>
-  </div>
+    <br>
 
+    <button id="submit-result-button" onclick="send_results()" class="btn btn-success" style="display: none;">Enregistrer les résultats</button>
+    <form id="algo-form" method="post">{% csrf_token %}</form>
+
+  </div>
+</html>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 {% include 'algorithm/algorithm.html' %}
 
 <script type="text/javascript">
+
+  if ("{{auto_skip}}" == "True") {
+    var rp = {{default_responses | safe}};
+  } else {
+    var rp = {};
+  }
+
   var current_question_id = null;
-  var rp = {};
   var progress_value = 0;
   const progress_step = 20;
   const none_output = "Condition non remplie.";
@@ -90,27 +105,36 @@
     }
   }
 
-  function show_response(response){
-    var resp_id = response[0];
-    var resp_text = response[1];
+  function sentence2html(sentence) {
+    var html = "";
+    for (const line of sentence.split('. ')) {
+      html += "<p>" + line + "</p>";
+    }
+    return html
+  }
 
+  function show_response(response){
     var content = "";
-    for (const [key, value] of Object.entries(resp_text)) {
-      content += "<h4>" + key + "</h4><hr>";
-      for (const line of value.split('. ')) {
-        content += "<p>" + line + "</p>";
-      }
+
+    if (response.includes('\n')) {
+      content += "<h4>Avant l'intervention</h4><hr>";
+      content += sentence2html(response.split('\n')[0]);
+      content += "<h4>Après l'intervention</h4><hr>";
+      content += sentence2html(response.split('\n')[1]);
+    }
+    else {
+      content += "<h4>Conclusion</h4><hr>";
+      content += sentence2html(response);
     }
     document.getElementById(current_question_id).style.display = 'none';
-
-    if (resp_id == 'final') {
-      update('end');
-      document.getElementById('next-button').style.display = 'none';
-      document.getElementById('previous-button').style.display = 'inline';
-      document.getElementById('final').style.display = 'inline';
-      document.getElementById('final').innerHTML = content;
-    }
-    current_question_id = resp_id;
+    document.getElementById('next-button').style.display = 'none';
+    document.getElementById('previous-button').style.display = 'inline';
+    document.getElementById('submit-result-button').style.display = 'inline';
+    document.getElementById('final').style.display = 'inline';
+    document.getElementById('final').innerHTML = content;
+    rp['final_response'] = response;
+    current_question_id = "final";
+    update('end');
   }
 
   function show_question(question_id) {
@@ -121,7 +145,7 @@
     else {
       document.getElementById('previous-button').style.display = 'inline';
     }
-
+    document.getElementById('submit-result-button').style.display = 'none';
     document.getElementById('next-button').style.display = 'inline';
     document.getElementById(question_id).style.display = 'inline';
     if (current_question_id != null) {
@@ -129,7 +153,6 @@
     }
     current_question_id = question_id;
   }
-
 
   function answer(response=null) {
     if (response != null) {
@@ -165,6 +188,24 @@
 
   function categorie(question_id) {
     return {{questions.traitement1.answers | safe}}[G(question_id)];
+  }
+
+  function send_results() {
+    const form = document.getElementById('algo-form');
+
+    for (const key in rp) {
+      if (rp.hasOwnProperty(key)) {
+        const hiddenField = document.createElement('input');
+        hiddenField.type = 'hidden';
+        hiddenField.name = key;
+        hiddenField.value = rp[key];
+
+        form.appendChild(hiddenField);
+      }
+    }
+
+    document.body.appendChild(form);
+    form.submit();
   }
 
 </script>
