--- a/src/personal/templates/personal/mytemplate.html
+++ b/src/personal/templates/personal/mytemplate.html
@@ -36,7 +36,7 @@
     </thead>
     <tbody>
       <tr>
-        <td>{{patient.resultats.traitement1}}</td>
+        <td>{{patient.traitement1}}</td>
         <td>{{patient.pathologie}}</td>
         <td>{{patient.ddn|date:'d-m-Y'}}</td>
       </tr>
