--- a/src/algorithm/templates/algorithm/manager.html
+++ b/src/algorithm/templates/algorithm/manager.html
@@ -186,7 +186,7 @@
     }
   }
 
-  function categorie(question_id) {
+  function flags(question_id) {
     return {{questions.traitement1.answers | safe}}[G(question_id)];
   }
 
