--- a/src/patient/templates/patient/detail_patient.html
+++ b/src/patient/templates/patient/detail_patient.html
@@ -30,6 +30,7 @@
 <div class="container px-4">
   <div class="header">
     <h4 class="h4"> Patient n°{{incl_num}}</h4>
+    <a href="{% url 'patient:postop' slug %}" style="float: right;" class="btn btn-link">Quand reprendre le traitement ?</a>        
   </div>
   <hr>
 
