--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -15,8 +15,8 @@
 </style>
 
 <div id="centered-buttons" class="btn-group-vertical">
-  <a type="button" href="{% url 'patient:create' %}" class="btn btn-outline-success">Quel traitement arréter et comment ?</a>
-  <a type="button" href='#' class="btn btn-outline-success">Quand reprendre le traitement ?</a>
+  <a type="button" href="{% url 'patient:preop' %}" class="btn btn-outline-success">Quel traitement arréter et comment ?</a>
+  <a type="button" href="{% url 'patient:patients' 'all' %}" class="btn btn-outline-success">Quand reprendre le traitement ?</a>
   <a type="button" href="{% url 'patient:patients' 'all' %}" class="btn btn-success">Patients</a>
 
 
