--- a/src/patient/templates/patient/postop_patient.html
+++ b/src/patient/templates/patient/postop_patient.html
@@ -35,50 +35,53 @@
 <form method="post" class="create-form">
   {% csrf_token %}
   <br>
-  <h3> Patient n° {{patient.incl_num}} | Saisie des données post-opératoires </h3>
-  <hr>
+  <h3> Patient n° {{patient.incl_num}} | Saisie des données post-opératoires </h3> <hr>
   {% include 'patient/snippets/field2html.html' with field=form.schema_therap %}
 
   <div class="table-responsive">
-  <table id="mytable" class="table table-bordred table-striped sortable">
-    <thead>
-      <th></th>
-      <th>Traitement</th>
-      <th>Catégorie</th>
-      <th>Indication</th>
-      <th>Date de dernière prise théorique</th>
-      <th>Date de dernière prise pratique</th>
-      <th>Inobservance</th>
-    </thead>
-    <tr>
-      <th> 1er </th>
-      <td> {{patient.traitement1}} </td>
-      <td> {{patient.categorie1}} </td>
-      <td> {{patient.pathologie}} </td>
-      <td> {{patient.date_derniere_prise1}} </td>
-      <td> <input type="date" name="date_derniere_prise1" id="date_derniere_prise1" class="form-control" value="{{form.date_derniere_prise1.value|date:'Y-m-d'}}"> </td>
-      <td><select class="form-select" id="inobservance1" name="inobservance1">
-        {% for value, label in form.inobservance1.field.choices %}
-          <option value="{{value}}" {% if field.value == value %} selected{% endif %}>{{ label }}</option>
-        {% endfor %}
-      </select></td>
-    </tr>
-    {% if patient.traitement2 != 'Aucun' %}
+    <table id="mytable" class="table table-bordred table-striped sortable">
+      <thead>
+        <th></th>
+        <th>Traitement</th>
+        <th>Catégorie</th>
+        <th>Indication</th>
+        <th>Date de dernière prise théorique</th>
+        <th>Date de dernière prise pratique</th>
+        <th>Inobservance</th>
+      </thead>
       <tr>
-        <th> 2ème </th>
-        <td> {{patient.traitement2}} </td>
-        <td> {{patient.categorie2}} </td>
+        <th> 1er </th>
+        <td> {{patient.traitement1}} </td>
+        <td> {{patient.categorie1}} </td>
         <td> {{patient.pathologie}} </td>
-        <td> {{patient.date_derniere_prise2}} </td>
-        <td> <input type="date" name="date_derniere_prise2" id="date_derniere_prise2" class="form-control" value="{{form.date_derniere_prise2.value|date:'Y-m-d'}}"> </td>
-        <td><select class="form-select" id="inobservance2" name="inobservance2">
-          {% for value, label in form.inobservance2.field.choices %}
-            <option value="{{value}}"{% if field.value == value %} selected{% endif %}>{{ label }}</option>
-          {% endfor %}
-        </select></td>
+        <td> {{patient.date_derniere_prise1}} </td>
+        <td> <input type="date" name="date_derniere_prise1" id="date_derniere_prise1" class="form-control" value="{{form.date_derniere_prise1.value|date:'Y-m-d'}}"> </td>
+        <td>
+          <select class="form-select" id="inobservance1" name="inobservance1">
+            {% for value, label in form.inobservance1.field.choices %}
+              <option value="{{value}}" {% if field.value == value %} selected{% endif %}>{{ label }}</option>
+            {% endfor %}
+          </select>
+        </td>
       </tr>
-    {% endif %}
-  </table>
+      {% if patient.traitement2 != 'Aucun' %}
+        <tr>
+          <th> 2ème </th>
+          <td> {{patient.traitement2}} </td>
+          <td> {{patient.categorie2}} </td>
+          <td> {{patient.pathologie}} </td>
+          <td> {{patient.date_derniere_prise2}} </td>
+          <td> <input type="date" name="date_derniere_prise2" id="date_derniere_prise2" class="form-control" value="{{form.date_derniere_prise2.value|date:'Y-m-d'}}"> </td>
+          <td>
+            <select class="form-select" id="inobservance2" name="inobservance2">
+              {% for value, label in form.inobservance2.field.choices %}
+                <option value="{{value}}"{% if field.value == value %} selected{% endif %}>{{ label }}</option>
+              {% endfor %}
+            </select>
+          </td>
+        </tr>
+      {% endif %}
+    </table>
   </div>
   <hr><br>
 
@@ -89,7 +92,5 @@
   {% endfor %}
   <button type="submit" class="btn btn-success">Envoyer</button>
 </form>
-
-
 
 {% endblock content %}
