--- a/utah/algorithm/templates/algorithm/algorithm.html
+++ b/utah/algorithm/templates/algorithm/algorithm.html
@@ -1,4 +1,5 @@
 <script type="text/javascript">
+  const none_output = "Condition non remplie.";
 
   function algorithm(){
 
@@ -82,26 +83,25 @@
 
 
   function bleeding(results) {
-    var res = none_output;
     if (results.length == 3) {
       if (G('bleeding_risk_1') == 'faible'){
-        res = results[0];
+        return results[0];
       }
       else if (G('bleeding_risk_1') == 'intermédiaire'){
-        res = results[1];
+        return results[1];
       }
       else if (G('bleeding_risk_1') == 'élevé'){
-        res = results[2];
+        return results[2];
       }
     }
     else if (results.length == 2) {
       if (G('bleeding_risk_2') == 'faible'){
-        res = results[0];
+        return results[0];
       }
       else if (G('bleeding_risk_2') == 'élevé'){
-        res = results[1];
+        return results[1];
       }
     }
-    return res
+    return none_output
   }
   </script>
