--- a/utah/algorithm/templates/algorithm/algorithm.html
+++ b/utah/algorithm/templates/algorithm/algorithm.html
@@ -1,32 +1,52 @@
 <script type="text/javascript">
-  const none_output = "Condition non remplie.";
+  const none_output = "Aucun résultat.";
 
   function algorithm(){
+    if (G('algo') == "Belge" ){
+      return belgian_guidelines();
+    }
+    else if (G('algo') == "Français" ){
+      return french_guidelines();
+    }
+    if (G('algo') == "Européen" ){
+      return european_guidelines();
+    }
+  }
+
+  function belgian_guidelines(){
+    return none_output;
+  }
+
+  function european_guidelines(){
+    return none_output;
+  }
+
+  function french_guidelines(){
 
     //---------------------------- TABLEAU 1 ---------------------------------
     if (flags('traitement1').includes('Antiagregant plaquettaire')) {
 
       if (G('traitement1') == "Aspirine, Asaflow, Cardioaspirine") {
         if (G('pathologie') == 'Prévention primaire') {
-          return bleeding(['Arrétez ou continuez le traitement.', 'Arrétez le traitement.', 'Arrétez le traitement.']); // ligne 1 (tableau 1)
+          return bleeding(['Arrêt ou non du traitement.', 'Arrêt du traitement.', 'Arrêt du traitement.']); // ligne 1 (tableau 1)
         }
         else if (G('pathologie') == "Prévention secondaire" && G('traitement2') == 'Aucun') {
-          return bleeding(['Continuez le traitement.', 'Continuez le traitement.', 'Arrétez le traitement.']); //ligne 2 (tableau 1)
+          return bleeding(["Pas d'arrêt du traitement.", "Pas d'arrêt du traitement.", "Arrêt du traitement."]); //ligne 2 (tableau 1)
         }
       }
       else if (G('traitement1') == "Clopidogrel, PLAVIX" && G('pathologie') == "Prévention secondaire" && G('traitement2') == 'Aucun') {
-        return bleeding(['Continuez le traitement.', "Arrétez le traitement. Bridge par l'aspirine.", 'Arrétez le traitement.']); //ligne 3 (tableau 1)
+        return bleeding(["Pas d'arrêt du traitement.", "Arrêt du traitement. Bridge par l'aspirine.", 'Arrêt du traitement.']); //ligne 3 (tableau 1)
       }
       else if (G('traitement1') == "Stents Cardiaques" && G('traitement2') != "Aucun") {
         if (G('stent_condition') != 'Autres') {
-          return bleeding(['Postpone the procedure. If impossible, continue the bitherapy.',
-                           'Postpone the procedure. If impossible, stop the anti-P2Y12, continue the aspirin.',
-                           'Postpone the procedure. If impossible, stop the bitherapy.']); //ligne 4 (tableau 1)
+          return bleeding(["Report de la procédure. Si impossible, poursuite de la bitherapie.",
+                           "Report de la procédure. Si impossible, arrêt de l'anti-P2Y12, pas d'arrêt de l'aspirine.",
+                           "Report de la procédure. Si impossible, arrêt de la bitherapie."]); //ligne 4 (tableau 1)
         }
         else {
-          return bleeding(['Continue the bitherapy.',
-                           'Stop the anti-P2Y12. Continue the aspirin.',
-                           'Stop the bitherapy.']); //ligne 5 (tableau 1)
+          return bleeding(["Pas d'arrêt de la bitherapie.",
+                           "Arrêt de l'anti-P2Y12. Pas d'arrêt de l'aspirine.",
+                           "Arrêt de la bitherapie."]); //ligne 5 (tableau 1)
         }
       }
     }
@@ -36,10 +56,10 @@
       //---------------------------- TABLEAU 2 ---------------------------------
       if (flags('traitement1').includes('AVK')) {
         if (G('thromboembolism_risk') == 'faible') {
-          return bleeding(['Continuation', 'Continuation']); // ligne 1 (tableau 2)
+          return bleeding(["Pas d'arrêt du traitement", "Pas d'arrêt du traitement"]); // ligne 1 (tableau 2)
         }
         else if (G('thromboembolism_risk') == 'élevé') {
-          return bleeding(['Stop at J-3', 'Bridge at J-7']); // ligne 1 (tableau 2)
+          return bleeding(['Arrét du traitement à J-3', 'Bridge à J-7']); // ligne 1 (tableau 2)
         }
       }
 
@@ -48,8 +68,8 @@
       var res_after = none_output;
 
       if (G('bleeding_risk_2') == 'faible') {
-        res_before = 'no taking the night before or the morning of the invasive gesture.';
-        res_after = 'restart at the usual time and at least 6 hours after the end of the procedure.';
+        res_before = "Pas de prise la nuit avant ou le matin du geste invasive";
+        res_after = "Reprise au moment habituel et au moins 6 heures après la fin de la procédure";
       }
 
       else if (G('bleeding_risk_2') == 'élevé') {
@@ -70,13 +90,13 @@
 
         // après la procédure
         if (flags('traitement1').includes('thrombo') || flags('traitement2').includes('thrombo')){
-          res_after = "Anticoagulants at a prophylactic dose at least 6 hours after the procedure." // ligne 3 (tableau 3)
+          res_after = "Anticoagulants à dose prophylactique au moins 6 heures après l'intervention." // ligne 3 (tableau 3)
         }
         else {
-          res_after = "Anticoagulants in curative doses as soon as haemostasis allows it." // ligne 4 (tableau 3)
+          res_after = "Anticoagulants à doses curatives dès que l'hémostase le permet." // ligne 4 (tableau 3)
         }
       }
-      return res_before + "No bridge. No dosage.\n" + res_after;
+      return res_before + " Pas de bridge. Pas de dosage.\n" + res_after;
     }
     return none_output
   }
