--- a/utah/personal/templates/personal/pdf_template.html
+++ b/utah/personal/templates/personal/pdf_template.html
@@ -24,6 +24,9 @@
   th {
       float: left;
   }
+  td {
+    white-space:pre
+  }
 
 </style>
 
@@ -43,7 +46,7 @@
     <tbody>
       <tr><th>Nom :</th>                <td>{{patient.lastname}}</td></tr>
       <tr><th>Prénom :</th>             <td>{{patient.firstname}}</td></tr>
-      <tr><th>Date de naissance :</th>  <td>{{patient.ddn | date:'d-m-Y'}}</td></tr>
+      <tr><th>Date de naissance :</th>  <td>{{patient.ddn | date:'d/m/Y'}}</td></tr>
       <tr><th>Poids :</th>              <td>{{patient.weight}} kg</td></tr>
       <tr><th>Taille :</th>             <td>{{patient.height}} cm</td></tr>
     </tbody>
@@ -53,11 +56,18 @@
   <h2> Intervention </h2>
   <table class="table" id="intervention">
     <tbody>
-      <tr><th>Nom du chirurgien :</th>                  <td>{{patient.chirurgien}}</td></tr>
-      <tr><th>Type de chirurgie :</th>                  <td>{{patient.chirurgie}}</td></tr>
-      <tr><th>Date de la chirurgie :</th>               <td>{{patient.ddi | date:'d-m-Y'}}</td></tr>
-      <tr><th>Médecin quie fait la consultation :</th>  <td>{{patient.consultant}}</td></tr>
-      <tr><th>Date de la consultation :</th>            <td>{{patient.ddconsult | date:'d-m-Y'}}</td></tr>
+      <tr><th>Nom du chirurgien :</th>    <td>{{patient.chirurgien}}</td></tr>
+      <tr><th>Type de chirurgie :</th>    <td>{{patient.chirurgie}}</td></tr>
+      <tr><th>Date de la chirurgie :</th> <td>{{patient.ddi | date:'d/m/Y'}}</td></tr>
+    </tbody>
+  </table>
+  <br>
+
+  <h2> Consultation </h2>
+  <table class="table" id="consultation">
+    <tbody>
+      <tr><th>Médecin qui fait la consultation :</th>  <td>{{patient.consultant}}</td></tr>
+      <tr><th>Date de la consultation :</th>           <td>{{patient.ddconsult | date:'d/m/Y'}}</td></tr>
     </tbody>
   </table>
   <br>
@@ -65,9 +75,9 @@
   <h2> Résultats </h2>
   <table class="table" id="result">
     <tbody>
-      <tr><th>Types de traitements :</th>          <td>{{patient.traitement1}}</td></tr>
-      <tr><th>Modalités d'interruption :</th>      <td>{{patient.resultat}}</td></tr>
-      <tr><th>Algorithme suivi :</th>              <td>Belge</td></tr>
+      <tr><th>Algorithme suivi :</th>          <td>{{patient.algo}}</td></tr>
+      <tr><th>Types de traitements :</th>      <td>{{patient.traitement1}} {% if patient.traitement2 %}<br>{{patient.traitement2}} {% endif %}</td></tr>
+      <tr><th>Modalités d'interruption :</th>  <td>{{patient.get_algo_result}}</td></tr>
     </tbody>
   </table>
 
