--- a/utah/personal/templates/personal/pdf_template.html
+++ b/utah/personal/templates/personal/pdf_template.html
@@ -44,7 +44,7 @@
 <div class="body">
 
   <div class="title">
-    <h1> Modifications traitements fluidificateurs sanguin </h1>
+    <h1> Modifications des traitements </h1>
   </div>
   <br><br>
 
@@ -79,7 +79,7 @@
   </table>
   <br><br>
 
-  <h2> Résultats </h2><hr>
+  <h2> Modifications à faire </h2><hr>
   <table class="table" id="result">
     <tbody>
       <tr><th>Algorithme suivi :</th>          <td>{{patient.algo}}</td></tr>
