--- a/utah/templates/snippets/header.html
+++ b/utah/templates/snippets/header.html
@@ -62,6 +62,7 @@
 				<ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
 					<li><a class="dropdown-item" href="{% url 'patient:patients' 'is_author' %}">Mes patients</a></li>
 					<li><a class="dropdown-item" href="{% url 'account' %}">Mon compte</a></li>
+					<li><a class="dropdown-item" href="{% url 'personal:data' %}">Récupérer les données</a></li>
 					<li><hr class="dropdown-divider"></li>
 					<li><a class="dropdown-item" href="{% url 'logout' %}">Se déconnecter</a></li>
 				</ul>
