--- a/utah/personal/templates/personal/pdf_template.html
+++ b/utah/personal/templates/personal/pdf_template.html
@@ -48,7 +48,7 @@
   </div>
   <br><br>
 
-  <h2> Patient N°{{num_patient}} </h2><hr>
+  <h2> Patient N°{{patient.hosp_num}} </h2><hr>
   <table class="table" id="info">
     <tbody>
       <tr><th>Nom :</th>                <td>{{patient.lastname}}</td></tr>
